// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoaderProgress workspace creation flow snapshot 1`] = `
<div
  className="progress pf-c-wizard"
>
  <button
    aria-expanded={true}
    aria-label="Wizard Toggle"
    className="pf-c-wizard__toggle pf-m-expanded"
    onClick={[Function]}
  >
    <span
      className="pf-c-wizard__toggle-list"
    >
      <span
        className="pf-c-wizard__toggle-list-item"
      >
        <span
          className="pf-c-wizard__toggle-num"
        />
         
      </span>
    </span>
    <span
      className="pf-c-wizard__toggle-icon"
    >
      <svg
        aria-hidden="true"
        aria-labelledby={null}
        fill="currentColor"
        height="1em"
        role="img"
        style={
          {
            "verticalAlign": "-0.125em",
          }
        }
        viewBox="0 0 320 512"
        width="1em"
      >
        <path
          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        />
      </svg>
    </span>
  </button>
  <div
    className="pf-c-wizard__outer-wrap"
  >
    <div
      className="pf-c-wizard__inner-wrap"
    >
      <nav
        aria-label="Workspace Progress Steps"
        className="pf-c-wizard__nav pf-m-expanded"
        data-ouia-component-id="OUIA-Generated-WizardNav-1"
        data-ouia-component-type="PF4/WizardNav"
        data-ouia-safe={true}
      >
        <ol
          className="pf-c-wizard__nav-list"
        >
          <li
            className="pf-c-wizard__nav-item"
          >
            <button
              aria-current="step"
              aria-disabled={null}
              className="pf-c-wizard__nav-link pf-m-current"
              data-ouia-component-id="OUIA-Generated-WizardNavItem-1"
              data-ouia-component-type="PF4/WizardNavItem"
              data-ouia-safe={true}
              disabled={false}
              onClick={[Function]}
            >
              <div
                data-testid="progress-step"
              >
                <span
                  data-testid="step-distance"
                >
                  0
                </span>
                <span
                  data-testid="step-name"
                >
                  Creating step: Initialize
                </span>
                <input
                  data-testid="onError"
                  name="onError"
                  onClick={[Function]}
                  type="button"
                  value="onError"
                />
                <input
                  data-testid="onRestart"
                  name="onRestart"
                  onClick={[Function]}
                  type="button"
                  value="onRestart"
                />
                <input
                  data-testid="onNextStep"
                  name=" onNextStep"
                  onClick={[Function]}
                  type="button"
                  value="onNextStep"
                />
              </div>
            </button>
          </li>
          <li
            className="pf-c-wizard__nav-item"
          >
            <button
              aria-current={false}
              aria-disabled={null}
              className="pf-c-wizard__nav-link"
              data-ouia-component-id="OUIA-Generated-WizardNavItem-2"
              data-ouia-component-type="PF4/WizardNavItem"
              data-ouia-safe={true}
              disabled={false}
              onClick={[Function]}
            >
              <div
                data-testid="progress-step"
              >
                <span
                  data-testid="step-distance"
                >
                  -1
                </span>
                <span
                  data-testid="step-name"
                >
                  Common step: Check running workspaces limit
                </span>
                <input
                  data-testid="onError"
                  name="onError"
                  onClick={[Function]}
                  type="button"
                  value="onError"
                />
                <input
                  data-testid="onRestart"
                  name="onRestart"
                  onClick={[Function]}
                  type="button"
                  value="onRestart"
                />
                <input
                  data-testid="onNextStep"
                  name=" onNextStep"
                  onClick={[Function]}
                  type="button"
                  value="onNextStep"
                />
              </div>
            </button>
          </li>
          <li
            className="pf-c-wizard__nav-item"
          >
            <button
              aria-current={false}
              aria-disabled={null}
              className="pf-c-wizard__nav-link"
              data-ouia-component-id="OUIA-Generated-WizardNavItem-3"
              data-ouia-component-type="PF4/WizardNavItem"
              data-ouia-safe={true}
              disabled={false}
              onClick={[Function]}
            >
              <div
                data-testid="progress-step"
              >
                <span
                  data-testid="step-distance"
                >
                  -1
                </span>
                <span
                  data-testid="step-name"
                >
                  Creating step: Create workspace
                </span>
                <input
                  data-testid="onError"
                  name="onError"
                  onClick={[Function]}
                  type="button"
                  value="onError"
                />
                <input
                  data-testid="onRestart"
                  name="onRestart"
                  onClick={[Function]}
                  type="button"
                  value="onRestart"
                />
                <input
                  data-testid="onNextStep"
                  name=" onNextStep"
                  onClick={[Function]}
                  type="button"
                  value="onNextStep"
                />
              </div>
            </button>
            <ol
              className="pf-c-wizard__nav-list"
            >
              <li
                className="pf-c-wizard__nav-item"
              >
                <button
                  aria-current={false}
                  aria-disabled={true}
                  className="pf-c-wizard__nav-link pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-WizardNavItem-4"
                  data-ouia-component-type="PF4/WizardNavItem"
                  data-ouia-safe={true}
                  disabled={true}
                  onClick={[Function]}
                >
                  <div
                    data-testid="progress-step"
                  >
                    <span
                      data-testid="step-distance"
                    >
                      -1
                    </span>
                    <span
                      data-testid="step-name"
                    >
                      Creating step: Fetch devfile
                    </span>
                    <input
                      data-testid="onError"
                      name="onError"
                      onClick={[Function]}
                      type="button"
                      value="onError"
                    />
                    <input
                      data-testid="onRestart"
                      name="onRestart"
                      onClick={[Function]}
                      type="button"
                      value="onRestart"
                    />
                    <input
                      data-testid="onNextStep"
                      name=" onNextStep"
                      onClick={[Function]}
                      type="button"
                      value="onNextStep"
                    />
                  </div>
                </button>
              </li>
              <li
                className="pf-c-wizard__nav-item"
              >
                <button
                  aria-current={false}
                  aria-disabled={true}
                  className="pf-c-wizard__nav-link pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-WizardNavItem-5"
                  data-ouia-component-type="PF4/WizardNavItem"
                  data-ouia-safe={true}
                  disabled={true}
                  onClick={[Function]}
                >
                  <div
                    data-testid="progress-step"
                  >
                    <span
                      data-testid="step-distance"
                    >
                      -1
                    </span>
                    <span
                      data-testid="step-name"
                    >
                      Creating step: Check existing workspaces
                    </span>
                    <input
                      data-testid="onError"
                      name="onError"
                      onClick={[Function]}
                      type="button"
                      value="onError"
                    />
                    <input
                      data-testid="onRestart"
                      name="onRestart"
                      onClick={[Function]}
                      type="button"
                      value="onRestart"
                    />
                    <input
                      data-testid="onNextStep"
                      name=" onNextStep"
                      onClick={[Function]}
                      type="button"
                      value="onNextStep"
                    />
                  </div>
                </button>
              </li>
              <li
                className="pf-c-wizard__nav-item"
              >
                <button
                  aria-current={false}
                  aria-disabled={true}
                  className="pf-c-wizard__nav-link pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-WizardNavItem-6"
                  data-ouia-component-type="PF4/WizardNavItem"
                  data-ouia-safe={true}
                  disabled={true}
                  onClick={[Function]}
                >
                  <div
                    data-testid="progress-step"
                  >
                    <span
                      data-testid="step-distance"
                    >
                      -1
                    </span>
                    <span
                      data-testid="step-name"
                    >
                      Creating step: Apply devfile
                    </span>
                    <input
                      data-testid="onError"
                      name="onError"
                      onClick={[Function]}
                      type="button"
                      value="onError"
                    />
                    <input
                      data-testid="onRestart"
                      name="onRestart"
                      onClick={[Function]}
                      type="button"
                      value="onRestart"
                    />
                    <input
                      data-testid="onNextStep"
                      name=" onNextStep"
                      onClick={[Function]}
                      type="button"
                      value="onNextStep"
                    />
                  </div>
                </button>
              </li>
            </ol>
          </li>
          <li
            className="pf-c-wizard__nav-item"
          >
            <button
              aria-current={false}
              aria-disabled={null}
              className="pf-c-wizard__nav-link"
              data-ouia-component-id="OUIA-Generated-WizardNavItem-7"
              data-ouia-component-type="PF4/WizardNavItem"
              data-ouia-safe={true}
              disabled={false}
              onClick={[Function]}
            >
              <div
                data-testid="progress-step"
              >
                <span
                  data-testid="step-distance"
                >
                  -1
                </span>
                <span
                  data-testid="step-name"
                >
                  Starting step: Start workspace
                </span>
                <input
                  data-testid="onError"
                  name="onError"
                  onClick={[Function]}
                  type="button"
                  value="onError"
                />
                <input
                  data-testid="onRestart"
                  name="onRestart"
                  onClick={[Function]}
                  type="button"
                  value="onRestart"
                />
                <input
                  data-testid="onNextStep"
                  name=" onNextStep"
                  onClick={[Function]}
                  type="button"
                  value="onNextStep"
                />
              </div>
            </button>
          </li>
          <li
            className="pf-c-wizard__nav-item"
          >
            <button
              aria-current={false}
              aria-disabled={null}
              className="pf-c-wizard__nav-link"
              data-ouia-component-id="OUIA-Generated-WizardNavItem-8"
              data-ouia-component-type="PF4/WizardNavItem"
              data-ouia-safe={true}
              disabled={false}
              onClick={[Function]}
            >
              <div
                data-testid="progress-step"
              >
                <span
                  data-testid="step-distance"
                >
                  -1
                </span>
                <span
                  data-testid="step-name"
                >
                  Starting step: Open workspace
                </span>
                <input
                  data-testid="onError"
                  name="onError"
                  onClick={[Function]}
                  type="button"
                  value="onError"
                />
                <input
                  data-testid="onRestart"
                  name="onRestart"
                  onClick={[Function]}
                  type="button"
                  value="onRestart"
                />
                <input
                  data-testid="onNextStep"
                  name=" onNextStep"
                  onClick={[Function]}
                  type="button"
                  value="onNextStep"
                />
              </div>
            </button>
          </li>
        </ol>
      </nav>
      <div
        aria-label={null}
        aria-labelledby={null}
        className="pf-c-wizard__main"
      >
        <div
          className="pf-c-wizard__main-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LoaderProgress workspace staring flow snapshot 1`] = `
<div
  className="progress pf-c-wizard"
>
  <button
    aria-expanded={true}
    aria-label="Wizard Toggle"
    className="pf-c-wizard__toggle pf-m-expanded"
    onClick={[Function]}
  >
    <span
      className="pf-c-wizard__toggle-list"
    >
      <span
        className="pf-c-wizard__toggle-list-item"
      >
        <span
          className="pf-c-wizard__toggle-num"
        />
         
      </span>
    </span>
    <span
      className="pf-c-wizard__toggle-icon"
    >
      <svg
        aria-hidden="true"
        aria-labelledby={null}
        fill="currentColor"
        height="1em"
        role="img"
        style={
          {
            "verticalAlign": "-0.125em",
          }
        }
        viewBox="0 0 320 512"
        width="1em"
      >
        <path
          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        />
      </svg>
    </span>
  </button>
  <div
    className="pf-c-wizard__outer-wrap"
  >
    <div
      className="pf-c-wizard__inner-wrap"
    >
      <nav
        aria-label="Workspace Progress Steps"
        className="pf-c-wizard__nav pf-m-expanded"
        data-ouia-component-id="OUIA-Generated-WizardNav-20"
        data-ouia-component-type="PF4/WizardNav"
        data-ouia-safe={true}
      >
        <ol
          className="pf-c-wizard__nav-list"
        >
          <li
            className="pf-c-wizard__nav-item"
          >
            <button
              aria-current="step"
              aria-disabled={null}
              className="pf-c-wizard__nav-link pf-m-current"
              data-ouia-component-id="OUIA-Generated-WizardNavItem-78"
              data-ouia-component-type="PF4/WizardNavItem"
              data-ouia-safe={true}
              disabled={false}
              onClick={[Function]}
            >
              <div
                data-testid="progress-step"
              >
                <span
                  data-testid="step-distance"
                >
                  0
                </span>
                <span
                  data-testid="step-name"
                >
                  Starting step: Initialize
                </span>
                <input
                  data-testid="onError"
                  name="onError"
                  onClick={[Function]}
                  type="button"
                  value="onError"
                />
                <input
                  data-testid="onRestart"
                  name="onRestart"
                  onClick={[Function]}
                  type="button"
                  value="onRestart"
                />
                <input
                  data-testid="onNextStep"
                  name=" onNextStep"
                  onClick={[Function]}
                  type="button"
                  value="onNextStep"
                />
              </div>
            </button>
          </li>
          <li
            className="pf-c-wizard__nav-item"
          >
            <button
              aria-current={false}
              aria-disabled={null}
              className="pf-c-wizard__nav-link"
              data-ouia-component-id="OUIA-Generated-WizardNavItem-79"
              data-ouia-component-type="PF4/WizardNavItem"
              data-ouia-safe={true}
              disabled={false}
              onClick={[Function]}
            >
              <div
                data-testid="progress-step"
              >
                <span
                  data-testid="step-distance"
                >
                  -1
                </span>
                <span
                  data-testid="step-name"
                >
                  Common step: Check running workspaces limit
                </span>
                <input
                  data-testid="onError"
                  name="onError"
                  onClick={[Function]}
                  type="button"
                  value="onError"
                />
                <input
                  data-testid="onRestart"
                  name="onRestart"
                  onClick={[Function]}
                  type="button"
                  value="onRestart"
                />
                <input
                  data-testid="onNextStep"
                  name=" onNextStep"
                  onClick={[Function]}
                  type="button"
                  value="onNextStep"
                />
              </div>
            </button>
          </li>
          <li
            className="pf-c-wizard__nav-item"
          >
            <button
              aria-current={false}
              aria-disabled={null}
              className="pf-c-wizard__nav-link"
              data-ouia-component-id="OUIA-Generated-WizardNavItem-80"
              data-ouia-component-type="PF4/WizardNavItem"
              data-ouia-safe={true}
              disabled={false}
              onClick={[Function]}
            >
              <div
                data-testid="progress-step"
              >
                <span
                  data-testid="step-distance"
                >
                  -1
                </span>
                <span
                  data-testid="step-name"
                >
                  Starting step: Start workspace
                </span>
                <input
                  data-testid="onError"
                  name="onError"
                  onClick={[Function]}
                  type="button"
                  value="onError"
                />
                <input
                  data-testid="onRestart"
                  name="onRestart"
                  onClick={[Function]}
                  type="button"
                  value="onRestart"
                />
                <input
                  data-testid="onNextStep"
                  name=" onNextStep"
                  onClick={[Function]}
                  type="button"
                  value="onNextStep"
                />
              </div>
            </button>
          </li>
          <li
            className="pf-c-wizard__nav-item"
          >
            <button
              aria-current={false}
              aria-disabled={null}
              className="pf-c-wizard__nav-link"
              data-ouia-component-id="OUIA-Generated-WizardNavItem-81"
              data-ouia-component-type="PF4/WizardNavItem"
              data-ouia-safe={true}
              disabled={false}
              onClick={[Function]}
            >
              <div
                data-testid="progress-step"
              >
                <span
                  data-testid="step-distance"
                >
                  -1
                </span>
                <span
                  data-testid="step-name"
                >
                  Starting step: Open workspace
                </span>
                <input
                  data-testid="onError"
                  name="onError"
                  onClick={[Function]}
                  type="button"
                  value="onError"
                />
                <input
                  data-testid="onRestart"
                  name="onRestart"
                  onClick={[Function]}
                  type="button"
                  value="onRestart"
                />
                <input
                  data-testid="onNextStep"
                  name=" onNextStep"
                  onClick={[Function]}
                  type="button"
                  value="onNextStep"
                />
              </div>
            </button>
          </li>
        </ol>
      </nav>
      <div
        aria-label={null}
        aria-labelledby={null}
        className="pf-c-wizard__main"
      >
        <div
          className="pf-c-wizard__main-body"
        />
      </div>
    </div>
  </div>
</div>
`;
